welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: '(' expected but identifier found.
for n in range(8):
    ^