welcome.lessons.welcome.loopfor.LoopStairs.scala.code
forward()
forward()
forward()
for n in range(8):
	left()
	forward()
	right()
	forward()